added a notebook for some data science

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ maintainers = [
 dependencies = [
     "numpy",
     "pandas",
+    "matplotlib",
     "ipykernel",
     "jupyterlab",
     "pypdf",
